# Multi-Device-Synchronization-Example

./: .gitignore  CMakeLists.txt  LICENSE  MultiDeviceSync.cpp  MultiDeviceSync_CN.md  MultiDeviceSync_EN.md  README.MD  README_CN.MD
config/: MultiDeviceSyncConfig.json
include/: window.hpp
lib/win_x64/orbbecsdk/: OrbbecSDK.lib
